--- a/demo_beauty/src/main/AndroidManifest.xml
+++ b/demo_beauty/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ksyun.KMCFuFilterDemo.beauty">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.ksyun.KMCFuFilterDemo.beauty"
+    android:installLocation="preferExternal">
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -19,10 +21,23 @@
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
+    <application
+        tools:replace="android:allowBackup"
+        android:allowBackup="false"
+        android:largeHeap="true"
+        android:launchMode="singleInstance"
+        android:persistent="false"
+        android:screenOrientation="portrait"
+        android:alwaysRetainTaskState="true"
+        android:anyDensity="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true" android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".MainActivity">
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,8 +45,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".CameraActivity">
-
+        <activity
+            android:name=".CameraActivity"
+            android:launchMode="singleTop">
         </activity>
     </application>
 
