--- a/demo_beauty/build.gradle
+++ b/demo_beauty/build.gradle
@@ -9,33 +9,45 @@ android {
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0.5"
+        versionName "1.0.7"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
+    signingConfigs {
+        config {
+            keyAlias 'ksystreamer'
+            keyPassword 'kscloud'
+            storeFile file('../ksystreamer.jks')
+            storePassword 'kscloud'
+        }
+    }
     buildTypes {
         release {
-            minifyEnabled false
+            signingConfig signingConfigs.config
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
-
-
 repositories {
     flatDir {
         dirs 'libs'
     }
 }
 
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.ksyun.media:libksylive-java:2.3.0'
-    compile 'com.ksyun.media:libksylive-arm64:2.3.0'
-    compile 'com.ksyun.media:libksylive-armv7a:2.3.0'
-    compile 'com.ksyun.media:libksylive-x86:2.3.0'
-    compile (name:'kmcfilter', ext: 'aar')
+    compile 'com.ksyun.media:libksylive-java:2.5.0'
+    compile 'com.ksyun.media:libksylive-arm64:2.5.0'
+    compile 'com.ksyun.media:libksylive-armv7a:2.5.0'
+    compile 'com.ksyun.media:libksylive-x86:2.5.0'
+   compile (name:'kmcfilter', ext: 'aar')
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile 'com.tencent.bugly:crashreport:latest.release'
+    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
