--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ proguard
 # Java class files
 *.class
 
+*.a
+
 *.log
 
 # Local configuration file (sdk path, etc)
@@ -36,3 +38,10 @@ Thumbs.db
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
 .gradle
 build/
+jni/ffmpeg/
+jni/curl/
+jni/__MACOSX/
+/KSYStreamerAndroidSDK.udb
+libksystreamer/.externalNativeBuild
+libkmcfilter/.externalNativeBuild
+*.hprof
