--- a/demo_sticker/build.gradle
+++ b/demo_sticker/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId 'com.ksyun.KMCFuFilterDemo.sticker'
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
-        versionName "1.0.5"
+        versionName "1.0.7"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     sourceSets {
@@ -16,16 +16,24 @@ android {
             jniLibs.srcDir 'libs'
         }
     }
+    signingConfigs {
+        config {
+            keyAlias 'ksystreamer'
+            keyPassword 'kscloud'
+            storeFile file('../ksystreamer.jks')
+            storePassword 'kscloud'
+        }
+    }
     buildTypes {
         release {
-            minifyEnabled false
+            signingConfig signingConfigs.config
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     productFlavors {
     }
 }
-
 repositories {
     flatDir {
         dirs 'libs'
@@ -36,9 +44,13 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.ksyun.media:libksylive-java:2.3.2'
-    compile 'com.ksyun.media:libksylive-arm64:2.3.2'
-    compile 'com.ksyun.media:libksylive-armv7a:2.3.2'
-    compile 'com.ksyun.media:libksylive-x86:2.3.2'
-    compile(name: 'kmcfilter', ext: 'aar')
+    compile 'com.ksyun.media:libksylive-java:2.5.0'
+    compile 'com.ksyun.media:libksylive-arm64:2.5.0'
+    compile 'com.ksyun.media:libksylive-armv7a:2.5.0'
+    compile 'com.ksyun.media:libksylive-x86:2.5.0'
+   compile (name:'kmcfilter', ext: 'aar')
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile 'com.tencent.bugly:crashreport:latest.release'
+    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
